// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@toggle: matches snapshot active 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@toggle: matches snapshot active checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@toggle: matches snapshot active checked: checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@toggle: matches snapshot active: default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@toggle: matches snapshot checked 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
/>
`;

exports[`@toggle: matches snapshot checked disabled 1`] = `
<Wrapper
  checked={true}
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@toggle: matches snapshot default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@toggle: matches snapshot disabled 1`] = `
<Wrapper
  disabled={true}
  forwardedRef={null}
/>
`;
